# Boltzmann_Harminic

./: README.md
Boltzmann_harmonic3D/: Boltzmann_harmonic3D.cpp  README.md
Boltzmann_harmonic3D_OpenMP/: CMakeLists.txt  README.md
Boltzmann_harmonic3D_OpenMP/cmake/: build_or_find_kokkos.cmake
Boltzmann_harmonic3D_OpenMP/config/: config.lua
Boltzmann_harmonic3D_OpenMP/include/: configs.hpp  lbm_kokkos_harmonic3D.hpp  lbm_shared.hpp
Boltzmann_harmonic3D_OpenMP/src/: Boltzmann_harmonic3D.cpp  configs.cpp  main.cpp
